admission/validatingAdmissionPolicies/policies/serviceaccounts-write/roles/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: role-serviceaccounts-write
  annotations:
    security.kubeapt.io/displayName: 'Serviceaccounts Write'
    security.kubeapt.io/description: Roles must not grant create/update/patch/delete on ServiceAccounts without strict scoping.
    security.kubeapt.io/resource: Roles
    security.kubeapt.io/severity: "8"
    security.kubeapt.io/remediation: "Remove create/update/patch/delete on serviceaccounts. Fields: rules[*].resources, rules[*].verbs."
    policies.kolteq.com/validatingAdmissionPolicy: cc916b1d-3a80-5ac5-9445-4f8b438f534b
  labels:
    check-role-serviceaccounts-write.security.kolteq.com/audit: 'false,true'
    check-role-serviceaccounts-write.security.kolteq.com/enforce: 'false,true'
    check-role-serviceaccounts-write.security.kolteq.com/warn: 'false,true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:
      - rbac.authorization.k8s.io
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - roles
  validations:
  - expression: |
      !has(object.rules) || object.rules.all(r,
        !(r.apiGroups.exists(ag, ag == "") &&
          r.resources.exists(res, res == "serviceaccounts") &&
          r.verbs.exists(v, v in ["create","update","patch","delete"]))
      )
    message: |
      Roles must not grant create/update/patch/delete on ServiceAccounts without strict scoping.
